tests/baselines/reference/icomparable.errors.txt
icomparable.ts(12,18): error TS2454: Variable 'sc' is used before being assigned.


==== icomparable.ts (1 errors) ====
        interface IComparable<T> {
           compareTo(other: T);
        }
    
        declare function sort<U extends IComparable<any>>(items: U[]): U[];
    
        interface StringComparable extends IComparable<string> {
        }
    
        var sc: StringComparable[];
    
        var x = sort(sc);
                     ~~
!!! error TS2454: Variable 'sc' is used before being assigned.